# frontier-builder-tsps-ntpc

./: .env.example  Dockerfile  README.md  compose.yaml  publish.sh
backend/: Cargo.toml
backend/db/: schema.sql
backend/db/migrations/: 20260304074030_init.sql
backend/model/: Cargo.toml
backend/model/src/: cargo.rs  enums.rs  news.rs  ws_msg.rs
backend/src/: cron.rs  main.rs
backend/src/handlers/: cargo.rs
backend/utils/src/: texture.rs
frontend/: package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/states/: input.svelte.ts
frontend/src/lib/types/: model.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/app/: +page.svelte
frontend/src/routes/app/pages/: intro.svelte  paint.svelte  result.svelte  select.svelte  upload.svelte
frontend/src/routes/config/: +page.svelte
frontend/static/: manifest.json
frontend/static/cargoes/: butterfly.glb  cloud.glb  drop.glb  leaf.glb
